# HighwayBidPricePrediction

./: README.md  Wetzel_CS526Final.ipynb  Wetzel_MSE504Final.ipynb  pyproject.toml
ExcelFiles/: BIDTABS_AWD L220419.xls  BIDTABS_AWD L220517.xls  Bid Tab Post Let 230117.xls  Bid Tabs 230321.xls  Bid Tabs 230718.xls  Bid Tabs Post 2207.xls  Bid Tabs Post 220816.xls  Bid Tabs Post 220912.xls  Bid Tabs Post 220920.xls  Bid Tabs Post 221018.xls  Bid Tabs Post 221115.xls  Bid Tabs Post 221220.xls  Bid Tabs Post 230221.xls  Bid Tabs Post 240909.xls  Bid Tabulations 240820 Post.xls  L220105 BIDTABS.xls  L220215 Awarded Bid Tabs.xls  L220315 BIDTABS_AWD.xls  L220621_BidTabs_awd.xls  L230418 Bid Tabs.xls  L230516 Bid Tabs.xls  L230620 Bid Tabs.xls  L230815 Bid Tabs.xls  L230919 Bid Tabs.xls  L231017 Bid Tabs.xls  L231121 Bid Tabs.xls  L231219 XLS Bid Tabs.xls  L240116 XLS Bid Tabs.xls  L240220 XLS Bid Tabs.xls  L240319 XLS Bid Tabs.xls  L240416 XLS Bid Tabs.xls  L240507 XLS Bid Tabs.xls  L240528 XLS Bid Tabs.xls  L240618 XLS Bid Tabs.xls  L240716 XLS Bid Tabs.xls  L240917 XLS Bid Tabs.xls  L241015 XLS Bid Tabs.xls  Post Bid Tabs 220118.xls
InferenceProposals/: C204988.csv
InferenceResults/: C204988.xlsx  C204988_nafilled.xlsx  global_weighted_avg_C204988.csv  ~$C204988_nafilled.xlsx
contract_rankings/: C204070_rankings.csv  C204110_rankings.csv  C204150_rankings.csv  C204176_rankings.csv  C204204_rankings.csv  C204207_rankings.csv  C204208_rankings.csv  C204217_rankings.csv  C204230_rankings.csv  C204237_rankings.csv  C204301_rankings.csv  C204302_rankings.csv  (+269 more)
(+300 files in other folders)
